--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -171,13 +171,13 @@ main {
         letter-spacing: 0.1em;
         border-radius: 0.5rem;
         color: #ffffff;
-        background-color: #ff0000;
-        border-bottom: 5px solid #cc0000;
+        background-color: #d20010;
+        border-bottom: 5px solid #9f000c;
         &:hover {
             margin-top: 3px;
             color: #ffffff;
-            background: #ff0a0a;
-            border-bottom: 2px solid #cc0000;
+            background: #d20010;
+            border-bottom: 2px solid #9f000c;
         }
     }
 }
