--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -110,7 +110,7 @@ main {
 
 .Content {
     margin: 1em;
-    min-width: 400px;
+    min-width: 25%;
     display: inline-block;
     text-align: left;
 }
